--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.1.0",
     "expo": "53.0.9",
+    "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.12.1",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0"
   },
